# Gearman server and library
# Copyright (C) 2008 Brian Aker, Eric Day
# All rights reserved.
#
# Use and distribution licensed under the BSD license.  See
# the COPYING file in this directory for full text.

EXTRA_DIST = gearmand.spec

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = gearmand.pc
